tests/fail/Ownership&Type/ownershipMoveNonCopyType.rs


fn take(a: String)  {
    println!(a);
}


fn main() {
    let s : String = "hello";


    take(s);
    println!(s);
}

// show that copy type is copied and not moved 


